# LightCoder

./: .gitignore  LICENSE  README.md
lcagent/: README.md  pyproject.toml
lcagent/src/lcagent/: __init__.py  cli.py  langfetch.py  main.py  modelinterface.py  toolfunctions.py
lcagent/src/lcagent/configs/: langfetch.toml  modelinterface.toml
lcagent/tests/: test_langfetch.py
