[project]
name = "lcagent"
version = "0.1.0"
description = "This is the python backend of LightCoder agent."
readme = "README.md"
authors = [
    { name = "Hazer", email = "22301092@bjtu.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "toml>=0.10.2",
]

[project.scripts]
lcagent = "lcagent:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
