[project]
name = "lcagent"
version = "0.1.0"
description = "This is the python backend of LightCoder agent."
readme = "README.md"
authors = [
    { name = "Hazer", email = "22301092@bjtu.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.6.1",
    "rich>=14.2.0",
    "toml>=0.10.2",
]

[project.scripts]
lcagent = "lcagent.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
